2012-12-10  Martin Robinson  <mrobinson@igalia.com>

        [GTK] Bring Harfbuzz-ng support to Gtk
        https://bugs.webkit.org/show_bug.cgi?id=92098

        Reviewed by Gustavo Noronha Silva.

        Add a HarfBuzz dependency.

        * GNUmakefile.am: Add FreeType/HarfBuzz CFLAGS/LIBS to the libraries.

2012-12-10  Simon Hausmann  <simon.hausmann@digia.com>

        [Qt] Use QLibraryInfo::LibraryExecutablesPath unconditionally
        https://bugs.webkit.org/show_bug.cgi?id=104541

        Reviewed by Jocelyn Turcotte.

        We now depend on a Qt 5 version that is guaranteed to have this API, so we
        can remove the configure checks for it.

        * PluginProcess.pro:
        * Shared/qt/ProcessExecutablePathQt.cpp:
        (WebKit::executablePath):
        * WebProcess.pro:

2012-12-10  Simon Hausmann  <simon.hausmann@digia.com>

        [Qt] Fix build without QtQuick 2

        Unreviewed trivial build fix.

        This function is defined in QtWebContext, which is only used when QtQuick2 is available.

        * UIProcess/qt/WebContextQt.cpp:
        (WebKit::WebContext::platformInvalidateContext):

2012-12-10  Huang Dongsung  <luxtella@company100.net>

        Coordinated Graphics: Remove the dependency of ShareableSurface from Coordinated Graphics.
        https://bugs.webkit.org/show_bug.cgi?id=100819

        Reviewed by Kenneth Rohde Christiansen.

        It is a follow-up patch of r137117.

        There are two changes
        1. Add a const qualifier to supportsAlpha().
        2. Use << instead of encode() when using ArgumentEncoder.

        * Shared/CoordinatedGraphics/CoordinatedSurface.h:
        (WebKit::CoordinatedSurface::supportsAlpha):
        * Shared/CoordinatedGraphics/WebCoordinatedSurface.cpp:
        (WebKit::WebCoordinatedSurface::Handle::encode):
        (WebKit::WebCoordinatedSurface::copyToTexture):

2012-12-10  Huang Dongsung  <luxtella@company100.net>
