@@ -1,3 +1,15 @@
+2012-12-10  Simon Hausmann  <simon.hausmann@digia.com>
+
+        [Qt] Fix QtWebProcess discovery on Windows
+        https://bugs.webkit.org/show_bug.cgi?id=104552
+
+        Reviewed by Jocelyn Turcotte.
+
+        Make sure to look for QtWebProcess.exe on Windows instead of QtWebProcess.
+
+        * Shared/qt/ProcessExecutablePathQt.cpp:
+        (WebKit::executablePath):
+
 2012-12-10  Martin Robinson  <mrobinson@igalia.com>
 
         [GTK] Bring Harfbuzz-ng support to Gtk
